Mon Mar 15 15:48:35 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * tests/cuts/Test_Log_Formats.mpc:
        * tests/cuts/test.mpc:
        * tests/cuts/utils/node/TestApp1.cpp:
        * tests/cuts/utils/node/TestApp2.cpp:
        * tests/cuts/utils/testing/test.mpc:

          . Fixed build errors.

        * tests/cuts/workers/Test_Logger:
        * tests/cuts/workers/Test_Logger/TestLoggerTest.bat:
        * tests/cuts/workers/Test_Logger/TestLoggerTest.build:
        * tests/cuts/workers/Test_Logger/TestLoggerTest.java:
        * tests/cuts/workers/Test_Logger/TestLoggerTest.sh:
        * tests/cuts/workers/Test_Logger/Test_Logger.mpc:
        * tests/cuts/workers/Test_Logger/Test_Logger.cpp:

          Removed these files.

Mon Mar 15 15:47:41 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/Log_T.inl:

          . Fixed build errors.

Sat Feb  6 22:29:21 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_Assembly_Generator_Preprocessor.cpp:

          . Fixed weird build error on obsolete code.

        * cuts/arch/ccm/CCM_ComponentServer_T.h:
        * cuts/arch/ccm/CCM_Container_T.h:
        * cuts/arch/ccm/CCM_Container_T.inl:

          . Updated CCM template classes to latest version of DOC
            middleware.

Sat Feb  6 02:10:22 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/utils/unite/Log_Format_Compiler.cpp:

          . Bug fix where several special characters were not escaped.
            This resulted in invalid evaluation of the dataset.

Thu Feb  4 22:30:05 UTC 2010  Manjula Peiris <tmpeiris at cs dot iupui dot edu>

        * cuts/java/utils/logging/client/interceptors/log4j/cuts/log4j/LoggingClientAppender.java:
        * cuts/java/utils/logging/client/logger/CUTS/client/logging/Logger.java:

          . Fixed a null pointer exception.Modified the Appender to send